# sc-python

./: README.md  repo.list
sc_ui/: pyproject.toml
sc_ui/.github/workflows/: release.yml
sc_ui/src/sc_ui/: __init__.py  sc_ui.py
ui/: README.md  pyproject.toml
ui/src/ui/: __init__.py  ui.py
